--- a/public/sass/_reset.scss
+++ b/public/sass/_reset.scss
@@ -40,3 +40,8 @@ q:before, q:after{
 table{
   border-collapse: collapse;
   border-spacing: 0;}
+*{
+    box-sizing:border-box;
+    margin:0;
+    padding:0;
+}
