--- a/public/css/main.css
+++ b/public/css/main.css
@@ -52,6 +52,7 @@ table {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  text-rendering: optimizelegibility;
 }
 
 /* grid */
@@ -94,7 +95,6 @@ table {
 
 .setting {
   position: fixed;
-  background-color: aquamarine;
   height: 100%;
 }
 
@@ -105,6 +105,58 @@ table {
 .colpick {
   margin: 0 auto;
   max-width: 100%;
+}
+
+.color_wrap {
+  padding: 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: left;
+  width: 200px;
+  margin: 10px;
+  color: #fff;
+  border-radius: 10px;
+}
+.color_wrap > div:first-child {
+  border-radius: 10px 10px 0 0;
+}
+.color_wrap > div:last-child {
+  border-radius: 0 0 10px 10px;
+}
+.color_wrap > div {
+  padding: 10px;
+}
+
+.green_sea {
+  background-color: #16A085;
+}
+
+.emerland {
+  background-color: #2ECC71;
+}
+
+.nephritis {
+  background-color: #27AE60;
+}
+
+.peter_river {
+  background-color: #3498DB;
+}
+
+.belizehole {
+  background-color: #2980B9;
+}
+
+.amethyst {
+  background-color: #9B59B6;
+}
+
+.Wisteria {
+  background-color: #8e44ad;
+}
+
+.wet_asphalt {
+  background-color: #34495E;
 }
 
 @media only screen and (max-width: 900px) {
