--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,7 +77,7 @@ table {
 }
 
 .span_1_of_2 {
-  width: 25%;
+  width: 230px;
 }
 
 /* style */
@@ -87,15 +87,16 @@ table {
 }
 
 .main_col {
-  background-color: lightblue;
-  width: 75%;
+  background-color: #fafafa;
+  width: calc(100% - 230px);
   height: 100em;
-  margin-left: 25%;
+  margin-left: 230px;
 }
 
 .setting {
   position: fixed;
   height: 100%;
+  background-color: #03a9f4;
 }
 
 .form {
