--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,87 @@ table {
   text-rendering: optimizelegibility;
 }
 
+body {
+  background-color: #888888;
+  color: #fff;
+}
+
+.btn {
+  font-family: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 25px 80px;
+  display: inline-block;
+  margin: 15px 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  transition: all 0.3s;
+  color: #fff;
+  border: 1px white solid;
+}
+
+.btn:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transition: all 0.3s;
+}
+
+.basic {
+  background-color: #000;
+}
+
+.one {
+  transition: all ease-in-out .2s;
+  background-color: #000;
+}
+.one:hover {
+  transform: scale(1.15);
+}
+
+.two {
+  background-color: #000000;
+}
+.two:hover {
+  background-color: #3e3e3e;
+  transition: background-color .2s ease-out;
+}
+
+.three {
+  border-radius: 10px;
+  background-color: #000;
+}
+
+.four {
+  border: 2px #ecd013 solid;
+  background-color: #000;
+}
+
+.five:after {
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
+  background: #fff;
+}
+
+.five:hover,
+.five:active {
+  color: #0e83cd;
+}
+
+.five:hover:after,
+.five:active:after {
+  height: 100%;
+}
+
+body {
+  background-color: #C0C0C0;
+}
+
 /* grid */
 .section {
   clear: both;
@@ -87,7 +168,6 @@ table {
 }
 
 .main_col {
-  background-color: #fafafa;
   width: calc(100% - 230px);
   height: 100em;
   margin-left: 230px;
