--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,10 +133,10 @@ body {
 }
 
 .wrap {
-  width: 30%;
+  width: 50%;
   position: absolute;
   top: 30px;
-  left: 50%;
+  left: 55%;
   transform: translate(-50%, -50%);
 }
 
@@ -277,6 +277,13 @@ body {
 .button {
   margin-top: 80px;
   text-align: center;
+}
+.button li {
+  display: inline-block;
+}
+
+.no-result {
+  display: none;
 }
 
 @media only screen and (max-width: 900px) {
