--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -90,7 +90,15 @@ body{
 .button {
 	margin-top: 80px;
 	text-align:center;
+	& li {
+		display: inline-block;
+	}
 }
+
+.no-result {
+  display:none;
+}
+
 
 @media only screen and (max-width: 900px) {
 	.span_2_of_2, .span_1_of_2 { width: 100%; }
